[East Sussex] Stop the menu overlapping the intro text on mobiles

--- a/web/cobrands/eastsussex/base.scss
+++ b/web/cobrands/eastsussex/base.scss
@@ -59,7 +59,9 @@ h1.main {
     margin: 0 0 9px;
 }
 
-.mappage .application-nav, .twothirdswidthpage .application-nav {
+// Make the navigation bar thinner on the map page so that it takes up less
+// room and doesn't push the map too far down.
+.mappage .application-nav {
     padding: 4.5px 9px;
 }
 
@@ -120,6 +122,10 @@ h1.main {
 #front-main {
 
     margin: 0;
+    // Add some margin to the top of this so that the FMS menu doesn't overlap
+    // it, because we show a menu at the top on East Sussex as well as at the
+    // bottom.
+    margin-top: 5em;
     padding: 1em;
 
     #front-main-container {
@@ -180,6 +186,20 @@ body > p {
             color: white;
         }
     }
+}
+
+// Add some margin to the top of this so that the FMS menu doesn't overlap
+// it, because we show a menu at the top on East Sussex as well as at the
+// bottom.
+.content {
+    margin-top: 5em;
+}
+// Undo that top margin on the map pages, because we don't show the menu there
+// and on the front page, because we've already accounted for it with our
+// margin on #front-main above.
+.mappage .content,
+.frontpage .content {
+    margin-top: 0em;
 }
 
 footer {
